# Stremio-VMB

./: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  stop-build-blockers.sh
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_create_tables.sql  002_extend_metadata.sql  003_create_discover_tables.sql  004_default_media_path.sql  005_media_series_name.sql  006_ai_recommendations_cache.sql  007_music_tables.sql
src-tauri/src/: db.rs  lib.rs
src-tauri/src/commands/: discover.rs  library.rs  metadata.rs  mod.rs  music.rs  player.rs  rd_streams.rs  realdebrid.rs  settings.rs
src-tauri/src/services/: discovery.rs  local_media.rs  metadata_provider.rs  metadata_service.rs  mod.rs  music_metadata.rs  music_storage.rs  perplexity.rs  quickconnect.rs  rd_streams.rs  realdebrid.rs  storage.rs  tmdb.rs  tmdb_api.rs
src/api/: commands.ts
src/components/: DiscoverCard.tsx  FormatBoldText.tsx  Layout.tsx  MediaCard.tsx  MusicPlayerBar.tsx  NavIcons.tsx  StarRating.tsx
src/context/: LibraryContext.tsx  MusicPlayerContext.tsx  ScanContext.tsx
src/utils/: libraryGrouping.ts  series.ts
src/views/: Details.tsx  Discover.tsx  DiscoverDetail.tsx  Library.tsx  LibrarySeries.tsx  MusicAlbumDetail.tsx  MusicLibrary.tsx  MusicNowPlaying.tsx  Player.tsx  Settings.tsx
